Engine and gameplay workstreams: compartment scoring, transfers, name/face labs
- Compartment/canonical scoring: contextual player ratings, passing-style
  and shooter match mechanics, weighted rating integration, calibration
  cleanup (shadow evaluation service and accumulator removed).
- Match plan: scoring decisions, shot volume unification groundwork.
- Transfer market: buy-top/sell-top strategy, matching passes, squad
  depth charts, transfer window reporting.
- Name generator: fragment/Lira/Vard styles replacing Dong; face lab
  service endpoints (dev-gated).
- Chairman mandate enforcement, league prize pools, misc controller and
  config updates; new integration tests for the above.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>